parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACTION
    BOOLEAN
    EOF
    EVENT_TYPE
    FUNC
    MAP
    QUOTE
    WHITESPACE

Grammar

Rule 0     S' -> ruleset
Rule 1     ruleset -> rule
Rule 2     ruleset -> rule ruleset
Rule 3     rule -> RULE
Rule 4     rule -> RULE NEWLINE INDENT ruleblock DEDENT
Rule 5     ruleblock -> event ruleblock
Rule 6     ruleblock -> conditions ruleblock
Rule 7     ruleblock -> actions ruleblock
Rule 8     ruleblock -> empty
Rule 9     event -> EVENT block
Rule 10    conditions -> CONDITIONS block
Rule 11    actions -> ACTIONS block
Rule 12    statements -> statements statement
Rule 13    statements -> statement
Rule 14    statement -> simple_stmt
Rule 15    simple_stmt -> expr_list NEWLINE
Rule 16    simple_stmt -> expr_list
Rule 17    compound_stmt -> number_expr
Rule 18    compound_stmt -> value_expr
Rule 19    block -> NEWLINE INDENT statements DEDENT
Rule 20    block -> simple_stmt
Rule 21    expr_list -> compare_expr
Rule 22    expr_list -> assign_expr
Rule 23    expr_list -> COMMENT_TAG expr_list
Rule 24    expr -> value
Rule 25    value -> variable
Rule 26    value -> compound_stmt
Rule 27    value -> number_const
Rule 28    value -> vector
Rule 29    value -> array
Rule 30    value -> empty
Rule 31    after_expr -> ( value_list )
Rule 32    after_expr -> block
Rule 33    after_expr -> NEWLINE
Rule 34    value_list -> value
Rule 35    value_list -> value , value_list
Rule 36    compare_expr -> expr
Rule 37    compare_expr -> compare_expr COMPARE expr
Rule 38    assign_expr -> value ASSIGN value
Rule 39    number_expr -> NUMBER after_expr
Rule 40    value_expr -> VALUE after_expr
Rule 41    number_const -> INTEGER
Rule 42    number_const -> FLOAT
Rule 43    variable -> name
Rule 44    variable -> global_var
Rule 45    variable -> player_var
Rule 46    name -> NAME
Rule 47    global_var -> GLOBAL_VAR
Rule 48    player_var -> PLAYER_VAR
Rule 49    vector -> COMPARE value , value , value COMPARE
Rule 50    array -> [ value_list ]
Rule 51    empty -> COMMENT
Rule 52    empty -> <empty>

Terminals, with rules where they appear

(                    : 31
)                    : 31
,                    : 35 49 49
ACTION               : 
ACTIONS              : 11
ASSIGN               : 38
BOOLEAN              : 
COMMENT              : 51
COMMENT_TAG          : 23
COMPARE              : 37 49 49
CONDITIONS           : 10
DEDENT               : 4 19
EOF                  : 
EVENT                : 9
EVENT_TYPE           : 
FLOAT                : 42
FUNC                 : 
GLOBAL_VAR           : 47
INDENT               : 4 19
INTEGER              : 41
MAP                  : 
NAME                 : 46
NEWLINE              : 4 15 19 33
NUMBER               : 39
PLAYER_VAR           : 48
QUOTE                : 
RULE                 : 3 4
VALUE                : 40
WHITESPACE           : 
[                    : 50
]                    : 50
error                : 

Nonterminals, with rules where they appear

actions              : 7
after_expr           : 39 40
array                : 29
assign_expr          : 22
block                : 9 10 11 32
compare_expr         : 21 37
compound_stmt        : 26
conditions           : 6
empty                : 8 30
event                : 5
expr                 : 36 37
expr_list            : 15 16 23
global_var           : 44
name                 : 43
number_const         : 27
number_expr          : 17
player_var           : 45
rule                 : 1 2
ruleblock            : 4 5 6 7
ruleset              : 2 0
simple_stmt          : 14 20
statement            : 12 13
statements           : 12 19
value                : 24 34 35 38 38 49 49 49
value_expr           : 18
value_list           : 31 35 50
variable             : 25
vector               : 28

Parsing method: LALR

state 0

    (0) S' -> . ruleset
    (1) ruleset -> . rule
    (2) ruleset -> . rule ruleset
    (3) rule -> . RULE
    (4) rule -> . RULE NEWLINE INDENT ruleblock DEDENT

    RULE            shift and go to state 3

    ruleset                        shift and go to state 1
    rule                           shift and go to state 2

state 1

    (0) S' -> ruleset .



state 2

    (1) ruleset -> rule .
    (2) ruleset -> rule . ruleset
    (1) ruleset -> . rule
    (2) ruleset -> . rule ruleset
    (3) rule -> . RULE
    (4) rule -> . RULE NEWLINE INDENT ruleblock DEDENT

    $end            reduce using rule 1 (ruleset -> rule .)
    RULE            shift and go to state 3

    rule                           shift and go to state 2
    ruleset                        shift and go to state 4

state 3

    (3) rule -> RULE .
    (4) rule -> RULE . NEWLINE INDENT ruleblock DEDENT

    RULE            reduce using rule 3 (rule -> RULE .)
    $end            reduce using rule 3 (rule -> RULE .)
    NEWLINE         shift and go to state 5


state 4

    (2) ruleset -> rule ruleset .

    $end            reduce using rule 2 (ruleset -> rule ruleset .)


state 5

    (4) rule -> RULE NEWLINE . INDENT ruleblock DEDENT

    INDENT          shift and go to state 6


state 6

    (4) rule -> RULE NEWLINE INDENT . ruleblock DEDENT
    (5) ruleblock -> . event ruleblock
    (6) ruleblock -> . conditions ruleblock
    (7) ruleblock -> . actions ruleblock
    (8) ruleblock -> . empty
    (9) event -> . EVENT block
    (10) conditions -> . CONDITIONS block
    (11) actions -> . ACTIONS block
    (51) empty -> . COMMENT
    (52) empty -> .

    EVENT           shift and go to state 12
    CONDITIONS      shift and go to state 13
    ACTIONS         shift and go to state 14
    COMMENT         shift and go to state 15
    DEDENT          reduce using rule 52 (empty -> .)

    ruleblock                      shift and go to state 7
    event                          shift and go to state 8
    conditions                     shift and go to state 9
    actions                        shift and go to state 10
    empty                          shift and go to state 11

state 7

    (4) rule -> RULE NEWLINE INDENT ruleblock . DEDENT

    DEDENT          shift and go to state 16


state 8

    (5) ruleblock -> event . ruleblock
    (5) ruleblock -> . event ruleblock
    (6) ruleblock -> . conditions ruleblock
    (7) ruleblock -> . actions ruleblock
    (8) ruleblock -> . empty
    (9) event -> . EVENT block
    (10) conditions -> . CONDITIONS block
    (11) actions -> . ACTIONS block
    (51) empty -> . COMMENT
    (52) empty -> .

    EVENT           shift and go to state 12
    CONDITIONS      shift and go to state 13
    ACTIONS         shift and go to state 14
    COMMENT         shift and go to state 15
    DEDENT          reduce using rule 52 (empty -> .)

    event                          shift and go to state 8
    ruleblock                      shift and go to state 17
    conditions                     shift and go to state 9
    actions                        shift and go to state 10
    empty                          shift and go to state 11

state 9

    (6) ruleblock -> conditions . ruleblock
    (5) ruleblock -> . event ruleblock
    (6) ruleblock -> . conditions ruleblock
    (7) ruleblock -> . actions ruleblock
    (8) ruleblock -> . empty
    (9) event -> . EVENT block
    (10) conditions -> . CONDITIONS block
    (11) actions -> . ACTIONS block
    (51) empty -> . COMMENT
    (52) empty -> .

    EVENT           shift and go to state 12
    CONDITIONS      shift and go to state 13
    ACTIONS         shift and go to state 14
    COMMENT         shift and go to state 15
    DEDENT          reduce using rule 52 (empty -> .)

    conditions                     shift and go to state 9
    ruleblock                      shift and go to state 18
    event                          shift and go to state 8
    actions                        shift and go to state 10
    empty                          shift and go to state 11

state 10

    (7) ruleblock -> actions . ruleblock
    (5) ruleblock -> . event ruleblock
    (6) ruleblock -> . conditions ruleblock
    (7) ruleblock -> . actions ruleblock
    (8) ruleblock -> . empty
    (9) event -> . EVENT block
    (10) conditions -> . CONDITIONS block
    (11) actions -> . ACTIONS block
    (51) empty -> . COMMENT
    (52) empty -> .

    EVENT           shift and go to state 12
    CONDITIONS      shift and go to state 13
    ACTIONS         shift and go to state 14
    COMMENT         shift and go to state 15
    DEDENT          reduce using rule 52 (empty -> .)

    actions                        shift and go to state 10
    ruleblock                      shift and go to state 19
    event                          shift and go to state 8
    conditions                     shift and go to state 9
    empty                          shift and go to state 11

state 11

    (8) ruleblock -> empty .

    DEDENT          reduce using rule 8 (ruleblock -> empty .)


state 12

    (9) event -> EVENT . block
    (19) block -> . NEWLINE INDENT statements DEDENT
    (20) block -> . simple_stmt
    (15) simple_stmt -> . expr_list NEWLINE
    (16) simple_stmt -> . expr_list
    (21) expr_list -> . compare_expr
    (22) expr_list -> . assign_expr
    (23) expr_list -> . COMMENT_TAG expr_list
    (36) compare_expr -> . expr
    (37) compare_expr -> . compare_expr COMPARE expr
    (38) assign_expr -> . value ASSIGN value
    (24) expr -> . value
    (25) value -> . variable
    (26) value -> . compound_stmt
    (27) value -> . number_const
    (28) value -> . vector
    (29) value -> . array
    (30) value -> . empty
    (43) variable -> . name
    (44) variable -> . global_var
    (45) variable -> . player_var
    (17) compound_stmt -> . number_expr
    (18) compound_stmt -> . value_expr
    (41) number_const -> . INTEGER
    (42) number_const -> . FLOAT
    (49) vector -> . COMPARE value , value , value COMPARE
    (50) array -> . [ value_list ]
    (51) empty -> . COMMENT
    (52) empty -> .
    (46) name -> . NAME
    (47) global_var -> . GLOBAL_VAR
    (48) player_var -> . PLAYER_VAR
    (39) number_expr -> . NUMBER after_expr
    (40) value_expr -> . VALUE after_expr

  ! shift/reduce conflict for COMPARE resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
    NEWLINE         shift and go to state 21
    COMMENT_TAG     shift and go to state 26
    INTEGER         shift and go to state 41
    FLOAT           shift and go to state 42
    COMPARE         shift and go to state 28
    [               shift and go to state 43
    COMMENT         shift and go to state 15
    ASSIGN          reduce using rule 52 (empty -> .)
    EVENT           reduce using rule 52 (empty -> .)
    CONDITIONS      reduce using rule 52 (empty -> .)
    ACTIONS         reduce using rule 52 (empty -> .)
    DEDENT          reduce using rule 52 (empty -> .)
    NAME            shift and go to state 44
    GLOBAL_VAR      shift and go to state 45
    PLAYER_VAR      shift and go to state 46
    NUMBER          shift and go to state 47
    VALUE           shift and go to state 48

  ! COMPARE         [ reduce using rule 52 (empty -> .) ]
  ! NEWLINE         [ reduce using rule 52 (empty -> .) ]
  ! COMMENT         [ reduce using rule 52 (empty -> .) ]

    block                          shift and go to state 20
    simple_stmt                    shift and go to state 22
    expr_list                      shift and go to state 23
    compare_expr                   shift and go to state 24
    assign_expr                    shift and go to state 25
    expr                           shift and go to state 27
    value                          shift and go to state 29
    variable                       shift and go to state 30
    compound_stmt                  shift and go to state 31
    number_const                   shift and go to state 32
    vector                         shift and go to state 33
    array                          shift and go to state 34
    empty                          shift and go to state 35
    name                           shift and go to state 36
    global_var                     shift and go to state 37
    player_var                     shift and go to state 38
    number_expr                    shift and go to state 39
    value_expr                     shift and go to state 40

state 13

    (10) conditions -> CONDITIONS . block
    (19) block -> . NEWLINE INDENT statements DEDENT
    (20) block -> . simple_stmt
    (15) simple_stmt -> . expr_list NEWLINE
    (16) simple_stmt -> . expr_list
    (21) expr_list -> . compare_expr
    (22) expr_list -> . assign_expr
    (23) expr_list -> . COMMENT_TAG expr_list
    (36) compare_expr -> . expr
    (37) compare_expr -> . compare_expr COMPARE expr
    (38) assign_expr -> . value ASSIGN value
    (24) expr -> . value
    (25) value -> . variable
    (26) value -> . compound_stmt
    (27) value -> . number_const
    (28) value -> . vector
    (29) value -> . array
    (30) value -> . empty
    (43) variable -> . name
    (44) variable -> . global_var
    (45) variable -> . player_var
    (17) compound_stmt -> . number_expr
    (18) compound_stmt -> . value_expr
    (41) number_const -> . INTEGER
    (42) number_const -> . FLOAT
    (49) vector -> . COMPARE value , value , value COMPARE
    (50) array -> . [ value_list ]
    (51) empty -> . COMMENT
    (52) empty -> .
    (46) name -> . NAME
    (47) global_var -> . GLOBAL_VAR
    (48) player_var -> . PLAYER_VAR
    (39) number_expr -> . NUMBER after_expr
    (40) value_expr -> . VALUE after_expr

  ! shift/reduce conflict for COMPARE resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
    NEWLINE         shift and go to state 21
    COMMENT_TAG     shift and go to state 26
    INTEGER         shift and go to state 41
    FLOAT           shift and go to state 42
    COMPARE         shift and go to state 28
    [               shift and go to state 43
    COMMENT         shift and go to state 15
    ASSIGN          reduce using rule 52 (empty -> .)
    EVENT           reduce using rule 52 (empty -> .)
    CONDITIONS      reduce using rule 52 (empty -> .)
    ACTIONS         reduce using rule 52 (empty -> .)
    DEDENT          reduce using rule 52 (empty -> .)
    NAME            shift and go to state 44
    GLOBAL_VAR      shift and go to state 45
    PLAYER_VAR      shift and go to state 46
    NUMBER          shift and go to state 47
    VALUE           shift and go to state 48

  ! COMPARE         [ reduce using rule 52 (empty -> .) ]
  ! NEWLINE         [ reduce using rule 52 (empty -> .) ]
  ! COMMENT         [ reduce using rule 52 (empty -> .) ]

    block                          shift and go to state 49
    simple_stmt                    shift and go to state 22
    expr_list                      shift and go to state 23
    compare_expr                   shift and go to state 24
    assign_expr                    shift and go to state 25
    expr                           shift and go to state 27
    value                          shift and go to state 29
    variable                       shift and go to state 30
    compound_stmt                  shift and go to state 31
    number_const                   shift and go to state 32
    vector                         shift and go to state 33
    array                          shift and go to state 34
    empty                          shift and go to state 35
    name                           shift and go to state 36
    global_var                     shift and go to state 37
    player_var                     shift and go to state 38
    number_expr                    shift and go to state 39
    value_expr                     shift and go to state 40

state 14

    (11) actions -> ACTIONS . block
    (19) block -> . NEWLINE INDENT statements DEDENT
    (20) block -> . simple_stmt
    (15) simple_stmt -> . expr_list NEWLINE
    (16) simple_stmt -> . expr_list
    (21) expr_list -> . compare_expr
    (22) expr_list -> . assign_expr
    (23) expr_list -> . COMMENT_TAG expr_list
    (36) compare_expr -> . expr
    (37) compare_expr -> . compare_expr COMPARE expr
    (38) assign_expr -> . value ASSIGN value
    (24) expr -> . value
    (25) value -> . variable
    (26) value -> . compound_stmt
    (27) value -> . number_const
    (28) value -> . vector
    (29) value -> . array
    (30) value -> . empty
    (43) variable -> . name
    (44) variable -> . global_var
    (45) variable -> . player_var
    (17) compound_stmt -> . number_expr
    (18) compound_stmt -> . value_expr
    (41) number_const -> . INTEGER
    (42) number_const -> . FLOAT
    (49) vector -> . COMPARE value , value , value COMPARE
    (50) array -> . [ value_list ]
    (51) empty -> . COMMENT
    (52) empty -> .
    (46) name -> . NAME
    (47) global_var -> . GLOBAL_VAR
    (48) player_var -> . PLAYER_VAR
    (39) number_expr -> . NUMBER after_expr
    (40) value_expr -> . VALUE after_expr

  ! shift/reduce conflict for COMPARE resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
    NEWLINE         shift and go to state 21
    COMMENT_TAG     shift and go to state 26
    INTEGER         shift and go to state 41
    FLOAT           shift and go to state 42
    COMPARE         shift and go to state 28
    [               shift and go to state 43
    COMMENT         shift and go to state 15
    ASSIGN          reduce using rule 52 (empty -> .)
    EVENT           reduce using rule 52 (empty -> .)
    CONDITIONS      reduce using rule 52 (empty -> .)
    ACTIONS         reduce using rule 52 (empty -> .)
    DEDENT          reduce using rule 52 (empty -> .)
    NAME            shift and go to state 44
    GLOBAL_VAR      shift and go to state 45
    PLAYER_VAR      shift and go to state 46
    NUMBER          shift and go to state 47
    VALUE           shift and go to state 48

  ! COMPARE         [ reduce using rule 52 (empty -> .) ]
  ! NEWLINE         [ reduce using rule 52 (empty -> .) ]
  ! COMMENT         [ reduce using rule 52 (empty -> .) ]

    block                          shift and go to state 50
    simple_stmt                    shift and go to state 22
    expr_list                      shift and go to state 23
    compare_expr                   shift and go to state 24
    assign_expr                    shift and go to state 25
    expr                           shift and go to state 27
    value                          shift and go to state 29
    variable                       shift and go to state 30
    compound_stmt                  shift and go to state 31
    number_const                   shift and go to state 32
    vector                         shift and go to state 33
    array                          shift and go to state 34
    empty                          shift and go to state 35
    name                           shift and go to state 36
    global_var                     shift and go to state 37
    player_var                     shift and go to state 38
    number_expr                    shift and go to state 39
    value_expr                     shift and go to state 40

state 15

    (51) empty -> COMMENT .

    DEDENT          reduce using rule 51 (empty -> COMMENT .)
    ASSIGN          reduce using rule 51 (empty -> COMMENT .)
    COMPARE         reduce using rule 51 (empty -> COMMENT .)
    NEWLINE         reduce using rule 51 (empty -> COMMENT .)
    EVENT           reduce using rule 51 (empty -> COMMENT .)
    CONDITIONS      reduce using rule 51 (empty -> COMMENT .)
    ACTIONS         reduce using rule 51 (empty -> COMMENT .)
    COMMENT         reduce using rule 51 (empty -> COMMENT .)
    ,               reduce using rule 51 (empty -> COMMENT .)
    ]               reduce using rule 51 (empty -> COMMENT .)
    COMMENT_TAG     reduce using rule 51 (empty -> COMMENT .)
    INTEGER         reduce using rule 51 (empty -> COMMENT .)
    FLOAT           reduce using rule 51 (empty -> COMMENT .)
    [               reduce using rule 51 (empty -> COMMENT .)
    NAME            reduce using rule 51 (empty -> COMMENT .)
    GLOBAL_VAR      reduce using rule 51 (empty -> COMMENT .)
    PLAYER_VAR      reduce using rule 51 (empty -> COMMENT .)
    NUMBER          reduce using rule 51 (empty -> COMMENT .)
    VALUE           reduce using rule 51 (empty -> COMMENT .)
    )               reduce using rule 51 (empty -> COMMENT .)


state 16

    (4) rule -> RULE NEWLINE INDENT ruleblock DEDENT .

    RULE            reduce using rule 4 (rule -> RULE NEWLINE INDENT ruleblock DEDENT .)
    $end            reduce using rule 4 (rule -> RULE NEWLINE INDENT ruleblock DEDENT .)


state 17

    (5) ruleblock -> event ruleblock .

    DEDENT          reduce using rule 5 (ruleblock -> event ruleblock .)


state 18

    (6) ruleblock -> conditions ruleblock .

    DEDENT          reduce using rule 6 (ruleblock -> conditions ruleblock .)


state 19

    (7) ruleblock -> actions ruleblock .

    DEDENT          reduce using rule 7 (ruleblock -> actions ruleblock .)


state 20

    (9) event -> EVENT block .

    EVENT           reduce using rule 9 (event -> EVENT block .)
    CONDITIONS      reduce using rule 9 (event -> EVENT block .)
    ACTIONS         reduce using rule 9 (event -> EVENT block .)
    COMMENT         reduce using rule 9 (event -> EVENT block .)
    DEDENT          reduce using rule 9 (event -> EVENT block .)


state 21

    (19) block -> NEWLINE . INDENT statements DEDENT

    INDENT          shift and go to state 51


state 22

    (20) block -> simple_stmt .

    EVENT           reduce using rule 20 (block -> simple_stmt .)
    CONDITIONS      reduce using rule 20 (block -> simple_stmt .)
    ACTIONS         reduce using rule 20 (block -> simple_stmt .)
    COMMENT         reduce using rule 20 (block -> simple_stmt .)
    DEDENT          reduce using rule 20 (block -> simple_stmt .)
    NEWLINE         reduce using rule 20 (block -> simple_stmt .)
    ASSIGN          reduce using rule 20 (block -> simple_stmt .)
    COMPARE         reduce using rule 20 (block -> simple_stmt .)
    ,               reduce using rule 20 (block -> simple_stmt .)
    ]               reduce using rule 20 (block -> simple_stmt .)
    COMMENT_TAG     reduce using rule 20 (block -> simple_stmt .)
    INTEGER         reduce using rule 20 (block -> simple_stmt .)
    FLOAT           reduce using rule 20 (block -> simple_stmt .)
    [               reduce using rule 20 (block -> simple_stmt .)
    NAME            reduce using rule 20 (block -> simple_stmt .)
    GLOBAL_VAR      reduce using rule 20 (block -> simple_stmt .)
    PLAYER_VAR      reduce using rule 20 (block -> simple_stmt .)
    NUMBER          reduce using rule 20 (block -> simple_stmt .)
    VALUE           reduce using rule 20 (block -> simple_stmt .)
    )               reduce using rule 20 (block -> simple_stmt .)


state 23

    (15) simple_stmt -> expr_list . NEWLINE
    (16) simple_stmt -> expr_list .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 52
    EVENT           reduce using rule 16 (simple_stmt -> expr_list .)
    CONDITIONS      reduce using rule 16 (simple_stmt -> expr_list .)
    ACTIONS         reduce using rule 16 (simple_stmt -> expr_list .)
    COMMENT         reduce using rule 16 (simple_stmt -> expr_list .)
    DEDENT          reduce using rule 16 (simple_stmt -> expr_list .)
    ASSIGN          reduce using rule 16 (simple_stmt -> expr_list .)
    COMPARE         reduce using rule 16 (simple_stmt -> expr_list .)
    ,               reduce using rule 16 (simple_stmt -> expr_list .)
    ]               reduce using rule 16 (simple_stmt -> expr_list .)
    COMMENT_TAG     reduce using rule 16 (simple_stmt -> expr_list .)
    INTEGER         reduce using rule 16 (simple_stmt -> expr_list .)
    FLOAT           reduce using rule 16 (simple_stmt -> expr_list .)
    [               reduce using rule 16 (simple_stmt -> expr_list .)
    NAME            reduce using rule 16 (simple_stmt -> expr_list .)
    GLOBAL_VAR      reduce using rule 16 (simple_stmt -> expr_list .)
    PLAYER_VAR      reduce using rule 16 (simple_stmt -> expr_list .)
    NUMBER          reduce using rule 16 (simple_stmt -> expr_list .)
    VALUE           reduce using rule 16 (simple_stmt -> expr_list .)
    )               reduce using rule 16 (simple_stmt -> expr_list .)

  ! NEWLINE         [ reduce using rule 16 (simple_stmt -> expr_list .) ]


state 24

    (21) expr_list -> compare_expr .
    (37) compare_expr -> compare_expr . COMPARE expr

  ! shift/reduce conflict for COMPARE resolved as shift
    NEWLINE         reduce using rule 21 (expr_list -> compare_expr .)
    EVENT           reduce using rule 21 (expr_list -> compare_expr .)
    CONDITIONS      reduce using rule 21 (expr_list -> compare_expr .)
    ACTIONS         reduce using rule 21 (expr_list -> compare_expr .)
    COMMENT         reduce using rule 21 (expr_list -> compare_expr .)
    DEDENT          reduce using rule 21 (expr_list -> compare_expr .)
    ASSIGN          reduce using rule 21 (expr_list -> compare_expr .)
    ,               reduce using rule 21 (expr_list -> compare_expr .)
    ]               reduce using rule 21 (expr_list -> compare_expr .)
    COMMENT_TAG     reduce using rule 21 (expr_list -> compare_expr .)
    INTEGER         reduce using rule 21 (expr_list -> compare_expr .)
    FLOAT           reduce using rule 21 (expr_list -> compare_expr .)
    [               reduce using rule 21 (expr_list -> compare_expr .)
    NAME            reduce using rule 21 (expr_list -> compare_expr .)
    GLOBAL_VAR      reduce using rule 21 (expr_list -> compare_expr .)
    PLAYER_VAR      reduce using rule 21 (expr_list -> compare_expr .)
    NUMBER          reduce using rule 21 (expr_list -> compare_expr .)
    VALUE           reduce using rule 21 (expr_list -> compare_expr .)
    )               reduce using rule 21 (expr_list -> compare_expr .)
    COMPARE         shift and go to state 53

  ! COMPARE         [ reduce using rule 21 (expr_list -> compare_expr .) ]


state 25

    (22) expr_list -> assign_expr .

    NEWLINE         reduce using rule 22 (expr_list -> assign_expr .)
    EVENT           reduce using rule 22 (expr_list -> assign_expr .)
    CONDITIONS      reduce using rule 22 (expr_list -> assign_expr .)
    ACTIONS         reduce using rule 22 (expr_list -> assign_expr .)
    COMMENT         reduce using rule 22 (expr_list -> assign_expr .)
    DEDENT          reduce using rule 22 (expr_list -> assign_expr .)
    ASSIGN          reduce using rule 22 (expr_list -> assign_expr .)
    COMPARE         reduce using rule 22 (expr_list -> assign_expr .)
    ,               reduce using rule 22 (expr_list -> assign_expr .)
    ]               reduce using rule 22 (expr_list -> assign_expr .)
    COMMENT_TAG     reduce using rule 22 (expr_list -> assign_expr .)
    INTEGER         reduce using rule 22 (expr_list -> assign_expr .)
    FLOAT           reduce using rule 22 (expr_list -> assign_expr .)
    [               reduce using rule 22 (expr_list -> assign_expr .)
    NAME            reduce using rule 22 (expr_list -> assign_expr .)
    GLOBAL_VAR      reduce using rule 22 (expr_list -> assign_expr .)
    PLAYER_VAR      reduce using rule 22 (expr_list -> assign_expr .)
    NUMBER          reduce using rule 22 (expr_list -> assign_expr .)
    VALUE           reduce using rule 22 (expr_list -> assign_expr .)
    )               reduce using rule 22 (expr_list -> assign_expr .)


state 26

    (23) expr_list -> COMMENT_TAG . expr_list
    (21) expr_list -> . compare_expr
    (22) expr_list -> . assign_expr
    (23) expr_list -> . COMMENT_TAG expr_list
    (36) compare_expr -> . expr
    (37) compare_expr -> . compare_expr COMPARE expr
    (38) assign_expr -> . value ASSIGN value
    (24) expr -> . value
    (25) value -> . variable
    (26) value -> . compound_stmt
    (27) value -> . number_const
    (28) value -> . vector
    (29) value -> . array
    (30) value -> . empty
    (43) variable -> . name
    (44) variable -> . global_var
    (45) variable -> . player_var
    (17) compound_stmt -> . number_expr
    (18) compound_stmt -> . value_expr
    (41) number_const -> . INTEGER
    (42) number_const -> . FLOAT
    (49) vector -> . COMPARE value , value , value COMPARE
    (50) array -> . [ value_list ]
    (51) empty -> . COMMENT
    (52) empty -> .
    (46) name -> . NAME
    (47) global_var -> . GLOBAL_VAR
    (48) player_var -> . PLAYER_VAR
    (39) number_expr -> . NUMBER after_expr
    (40) value_expr -> . VALUE after_expr

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for COMPARE resolved as shift
  ! shift/reduce conflict for COMMENT_TAG resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for [ resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for GLOBAL_VAR resolved as shift
  ! shift/reduce conflict for PLAYER_VAR resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for VALUE resolved as shift
    COMMENT_TAG     shift and go to state 26
    INTEGER         shift and go to state 41
    FLOAT           shift and go to state 42
    COMPARE         shift and go to state 28
    [               shift and go to state 43
    COMMENT         shift and go to state 15
    NEWLINE         reduce using rule 52 (empty -> .)
    EVENT           reduce using rule 52 (empty -> .)
    CONDITIONS      reduce using rule 52 (empty -> .)
    ACTIONS         reduce using rule 52 (empty -> .)
    DEDENT          reduce using rule 52 (empty -> .)
    ASSIGN          reduce using rule 52 (empty -> .)
    ,               reduce using rule 52 (empty -> .)
    ]               reduce using rule 52 (empty -> .)
    )               reduce using rule 52 (empty -> .)
    NAME            shift and go to state 44
    GLOBAL_VAR      shift and go to state 45
    PLAYER_VAR      shift and go to state 46
    NUMBER          shift and go to state 47
    VALUE           shift and go to state 48

  ! COMMENT         [ reduce using rule 52 (empty -> .) ]
  ! COMPARE         [ reduce using rule 52 (empty -> .) ]
  ! COMMENT_TAG     [ reduce using rule 52 (empty -> .) ]
  ! INTEGER         [ reduce using rule 52 (empty -> .) ]
  ! FLOAT           [ reduce using rule 52 (empty -> .) ]
  ! [               [ reduce using rule 52 (empty -> .) ]
  ! NAME            [ reduce using rule 52 (empty -> .) ]
  ! GLOBAL_VAR      [ reduce using rule 52 (empty -> .) ]
  ! PLAYER_VAR      [ reduce using rule 52 (empty -> .) ]
  ! NUMBER          [ reduce using rule 52 (empty -> .) ]
  ! VALUE           [ reduce using rule 52 (empty -> .) ]

    expr_list                      shift and go to state 54
    compare_expr                   shift and go to state 24
    assign_expr                    shift and go to state 25
    expr                           shift and go to state 27
    value                          shift and go to state 29
    variable                       shift and go to state 30
    compound_stmt                  shift and go to state 31
    number_const                   shift and go to state 32
    vector                         shift and go to state 33
    array                          shift and go to state 34
    empty                          shift and go to state 35
    name                           shift and go to state 36
    global_var                     shift and go to state 37
    player_var                     shift and go to state 38
    number_expr                    shift and go to state 39
    value_expr                     shift and go to state 40

state 27

    (36) compare_expr -> expr .

    COMPARE         reduce using rule 36 (compare_expr -> expr .)
    NEWLINE         reduce using rule 36 (compare_expr -> expr .)
    EVENT           reduce using rule 36 (compare_expr -> expr .)
    CONDITIONS      reduce using rule 36 (compare_expr -> expr .)
    ACTIONS         reduce using rule 36 (compare_expr -> expr .)
    COMMENT         reduce using rule 36 (compare_expr -> expr .)
    DEDENT          reduce using rule 36 (compare_expr -> expr .)
    ASSIGN          reduce using rule 36 (compare_expr -> expr .)
    ,               reduce using rule 36 (compare_expr -> expr .)
    ]               reduce using rule 36 (compare_expr -> expr .)
    COMMENT_TAG     reduce using rule 36 (compare_expr -> expr .)
    INTEGER         reduce using rule 36 (compare_expr -> expr .)
    FLOAT           reduce using rule 36 (compare_expr -> expr .)
    [               reduce using rule 36 (compare_expr -> expr .)
    NAME            reduce using rule 36 (compare_expr -> expr .)
    GLOBAL_VAR      reduce using rule 36 (compare_expr -> expr .)
    PLAYER_VAR      reduce using rule 36 (compare_expr -> expr .)
    NUMBER          reduce using rule 36 (compare_expr -> expr .)
    VALUE           reduce using rule 36 (compare_expr -> expr .)
    )               reduce using rule 36 (compare_expr -> expr .)


state 28

    (49) vector -> COMPARE . value , value , value COMPARE
    (25) value -> . variable
    (26) value -> . compound_stmt
    (27) value -> . number_const
    (28) value -> . vector
    (29) value -> . array
    (30) value -> . empty
    (43) variable -> . name
    (44) variable -> . global_var
    (45) variable -> . player_var
    (17) compound_stmt -> . number_expr
    (18) compound_stmt -> . value_expr
    (41) number_const -> . INTEGER
    (42) number_const -> . FLOAT
    (49) vector -> . COMPARE value , value , value COMPARE
    (50) array -> . [ value_list ]
    (51) empty -> . COMMENT
    (52) empty -> .
    (46) name -> . NAME
    (47) global_var -> . GLOBAL_VAR
    (48) player_var -> . PLAYER_VAR
    (39) number_expr -> . NUMBER after_expr
    (40) value_expr -> . VALUE after_expr

    INTEGER         shift and go to state 41
    FLOAT           shift and go to state 42
    COMPARE         shift and go to state 28
    [               shift and go to state 43
    COMMENT         shift and go to state 15
    ,               reduce using rule 52 (empty -> .)
    NAME            shift and go to state 44
    GLOBAL_VAR      shift and go to state 45
    PLAYER_VAR      shift and go to state 46
    NUMBER          shift and go to state 47
    VALUE           shift and go to state 48

    value                          shift and go to state 55
    variable                       shift and go to state 30
    compound_stmt                  shift and go to state 31
    number_const                   shift and go to state 32
    vector                         shift and go to state 33
    array                          shift and go to state 34
    empty                          shift and go to state 35
    name                           shift and go to state 36
    global_var                     shift and go to state 37
    player_var                     shift and go to state 38
    number_expr                    shift and go to state 39
    value_expr                     shift and go to state 40

state 29

    (38) assign_expr -> value . ASSIGN value
    (24) expr -> value .
